# drainpipe

./: Cargo.toml  README.md  readme.md
.github/workflows/: ci.yml
drainpipe/: Cargo.toml
drainpipe/src/: main.rs
golf/: Cargo.toml
golf/src/: main.rs
infinite_mirror/: Cargo.toml
infinite_mirror/src/: main.rs
norse/: Cargo.toml
norse/src/: main.rs
pipeline/: Cargo.toml
pipeline/src/: main.rs
things/: Cargo.toml
things/src/: main.rs
