[package]
name = "drainpipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.46.0", features = ["lazy", "rows"] }
regex = "1.11.1"

[profile.dev]
  opt-level = 0
  debug = 0  # skip debug info, saves significant space
